# movie-scout

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.ingest  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  railway.json
.github/workflows/: ci.yml
agent/: config.py  cost.py  graph.py  main.py  routing.py  state.py
agent/nodes/: __init__.py  orchestrator.py  rag.py  rewrite.py  synthesize.py  web.py
agent/prompts/: extract_seed_title.md  extract_title.md  inform.md  orchestrator.md  rag_system.md  synthesize.md  synthesize_v2.md  web_system.md
agent/tools/: actor_film.py  disambiguation.py  franchise.py  query_mode.py  query_scope.py  seed_film.py  taste_matcher.py  tmdb_providers.py  tmdb_search.py  vector_search_movies.py  web_search.py  (+1 more)
api/: config.py  dependencies.py  fastapi_app.py  models.py  store.py
data/: .gitignore  README.md
docs/: deploy.md  manual_testing.md  retrieval_quality.md
eval/: cli.py  golden.py  golden_corpus_sample.py  golden_set.py  metrics.py  rerank_local.py
frontend/: README.md  client.py  posters.py  streamlit_app.py
ingestion/: chunking.py  config.py  dlt_pipeline.py  embedding.py  models.py  pipeline.py  theme_extraction.py
retrieval/: README.md  client.py  config.py  hyde.py  models.py  movies.py  rerank.py  reviews.py  rewrite.py  taste.py  taste_upload.py
scripts/: backfill_bm25_sparse.py  backfill_cast_payload.py  backfill_keywords_payload.py  calibrate_hybrid_dense_score.py  restore_qdrant.py  snapshot_qdrant.py
(+105 files in other folders)
